Fixed the scrollbar height for xp sp3 ie6
set 'font-size:0' for the scrollbar

--- a/src/perfect-scrollbar.css
+++ b/src/perfect-scrollbar.css
@@ -14,6 +14,10 @@
     transition: opacity .2s linear;
 }
 
+.ps-container.ie6 .ps-scrollbar-x {
+    font-size: 0; /* fixed scrollbar height in xp sp3 ie6 */
+}
+
 .ps-container:hover .ps-scrollbar-x,
 .ps-container.hover .ps-scrollbar-x {
     opacity: 0.6;
@@ -46,6 +50,10 @@
     -webkit-transition: opacity.2s linear;
     -moz-transition: opacity .2s linear;
     transition: opacity .2s linear;
+}
+
+.ps-container.ie .ps-scrollbar-y {
+    font-size: 0; /* fixed scrollbar height in xp sp3 ie6 */
 }
 
 .ps-container:hover .ps-scrollbar-y,
